--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
     <td>94</td>
   </tr>
 </p>my name is shivam
-</p>
+
+</table>
+<table id="t01">
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th>
+    <th>Age</th>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+
 </table>
 </body>
 </html>
